# testing

./: LICENSE  README.md  pyproject.toml
djcrm/: settings.py
leads/: forms.py  models.py  urls.py  views.py
leads/migrations/: 0001_initial.py
leads/templates/leads/: home_page.html  lead_create.html  lead_detail.html  lead_list.html  lead_update.html
templates/: base.html  scripts.html
