[tool.poetry]
name = "testing"
version = "0.1.0"
description = "testing django"
authors = ["SteDev78 <33556821+SteDev78@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.2"
black = "^21.5b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
